[project]
name = "blast"
description = "BLAST user interface"
dynamic=["version"]
authors = [
    {name = "JB", email = "j.bishop@utoronto.ca"}
]
license = {file = "LICENSE.md"}
dependencies = [
            "scipy",
            "scikit-learn",
            "numpy",
            "scikit-image",
            "SimpleITK",
            "pandas",
            "matplotlib",
            "connected-components-3d",
            "twisted",
            "versioneer",
            "build"      ]
[project.urls]
"Source" = "https://github.com/jeb2112/blast"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
# in addition, for non-standard directory structures in the package, need to 
# specify package location with either this:
#[tool.setuptools]
#packages = ["src"]
#or this:
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
#include = ["src"]  # package names should match these glob patterns (["*"] by default)

# beta support?
[tool.setuptools.package-data]
resources = ["*.png","*.ico","*.bat"]

[build-system]
# to continue using setup.py and setup.cfg use setuptools
requires = ["setuptools>=43.0.0", "wheel","versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project.scripts]
startGui = "src.startGui:main"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/_version.py"
versionfile_build = "_version.py"
tag_prefix = "v"
parentdir_prefix = "blast-"